@@ -2,6 +2,8 @@
 
 	* shr.el (shr-render-td): Only do colours at the final rendering.
 	Should be slightly faster.
+	(shr-insert-table): Fix up TD background colours when doing the
+	vertical padding.
 
 	* gnus-art.el (article-date-ut): Protect against articles with no Date
 	header.
